--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,13 @@
 
     <!--Строки для карточки пользователя-->
     <string name="user_card_name">Имя:</string>
+    <string name="user_card_full_name">ФИО:</string>
     <string name="user_card_second_name">Фамилия:</string>
     <string name="user_card_patronymic">Отчество:</string>
     <string name="user_card_address">Адрес:</string>
     <string name="user_card_date_of_birth">Дата рождения:</string>
     <string name="user_card_photo">Фото:</string>
+    <string name="user_card_number_of_brooms">Количество веников:</string>
+    <string name="edit">Редактировать</string>
+    <string name="add">Добавить</string>
 </resources>
