--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="edit">Редактировать</string>
     <string name="save">Сохранить</string>
     <string name="empty_list">Список пуст</string>
+    <string name="find">искать</string>
     <string name="add">Добавить</string>
     <string name="required_field">Обязательное поле</string>
 </resources>
