--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,20 +3,19 @@
     <string name="app_name">Веник каждому</string>
 
     <!--Строки для карточки пользователя-->
-    <string name="user_card_name">Имя:</string>
-    <string name="user_card_full_name">ФИО:</string>
-    <string name="user_card_second_name">Фамилия:</string>
-    <string name="user_card_patronymic">Отчество:</string>
-    <string name="user_card_address">Адрес:</string>
-    <string name="user_card_date_of_birth">Дата рождения:</string>
+    <string name="user_card_name">Имя</string>
+    <string name="user_card_full_name">ФИО</string>
+    <string name="user_card_second_name">Фамилия</string>
+    <string name="user_card_patronymic">Отчество</string>
+    <string name="user_card_address">Адрес</string>
+    <string name="user_card_date_of_birth">Дата рождения</string>
     <string name="user_card_input_dob">Введите дату рождения</string>
-    <string name="user_card_photo">Фото:</string>
-    <string name="user_card_number_of_brooms">Количество веников:</string>
+    <string name="user_card_number_of_brooms">Количество веников</string>
     <string name="info_about_permission">Для полноценной работы приложения необходимо принять соглашение</string>
     <string name="imput_date">нажмите для ввода даты</string>
     <string name="save">Сохранить</string>
     <string name="empty_list">Список пуст</string>
-    <string name="find">искать</string>
+    <string name="find">Введите запрос</string>
     <string name="add">Добавить</string>
     <string name="not_find_result">Не найдено результатов</string>
     <string name="required_field">Обязательное поле</string>
